Closed Bug 840505 Opened 12 years ago Closed 12 years ago

BaselineCompiler: Fix arguments marking

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jandem, Assigned: jandem)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
We were marking args up to numActualArgs instead of max(numActualArgs, numFormalArgs). If there are more formals, they are initially |undefined|, but they can be assigned other values. This patch also moves all the baseline frame marking code to BaselineFrame::trace to avoid confusion about what is done where. Fixes the last jsreftest failure in the shell, tests/js1_5/GC/regress-104584.js.
Attachment #712890 - Flags: review?(kvijayan)
Attachment #712890 - Flags: review?(kvijayan) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: