Bug 840505 - Fix marking of formal arguments. r=djvj